--- a/demo.html
+++ b/demo.html
@@ -3,8 +3,7 @@
 <head>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     <title>Time picker DEMO</title>
-    <!-- <link rel="stylesheet" type="text/css" href="css/font-awesome.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="css/w3.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/w3.css">
     <link rel="stylesheet" type="text/css" href="css/timeselect.css">
     <style type="text/css">
         /* Just to center things */
